--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,5 @@
 <div class="tela">
 <app-header textoBotao="Cadastrar" rotaBotao="/cadastro" />
 <app-apresentacao/>
+<app-feedback-da-galera/>
 </div>
