--- a/src/app/components/reutilizavel/header/header.component.scss
+++ b/src/app/components/reutilizavel/header/header.component.scss
@@ -15,6 +15,10 @@ header {
         .logo-img{
             width: 100px;
             height: 60px;
+            transition: all ease 0.4s;
+            &:hover{
+                scale: 1.1;
+            }
         }
         .grupo-button{
             display: flex;
