feat: qualidades-da-empresa-na-home

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,6 @@
 <div class="tela">
 <app-header textoBotao="Cadastrar" rotaBotao="/cadastro" />
 <app-apresentacao/>
+<app-qualidades-albertech/>
 <app-feedback-da-galera/>
 </div>
