--- a/src/app/components/home/qualidades-albertech/qualidades-albertech.component.html
+++ b/src/app/components/home/qualidades-albertech/qualidades-albertech.component.html
@@ -6,10 +6,10 @@
         </div>
 
         <div class="cards">
-            @for (card of cards; track $index) {
-                <div class="card" data-aos="zoom-in" data-aos-easing="linear" data-aos-duration="1000"><div class="fundo-img"><img src="img/icons/comunidade-icon.svg" alt=""></div>
-            <h3 class="font-quando-b">Gestão completa</h3>
-            <p class="font-quando">Cadastre edite e oganize todos os seus clientes em uma interface moderna</p></div>
+            @for (qualidade of qualidades; track $index) {
+                <div class="card" data-aos="zoom-in" data-aos-easing="linear" data-aos-duration="1000"><div class="fundo-img"><img src={{qualidade.imagem}} alt=""></div>
+            <h3 class="font-quando-b">{{qualidade.titulo}}</h3>
+            <p class="font-quando">{{qualidade.descricao}}</p></div>
             }
             
         </div>
