feat: componente-footer

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,7 @@
 <div class="tela">
-<app-header textoBotao="Cadastrar" rotaBotao="/cadastro" />
+<app-header textoBotao="Login" rotaBotao="/login" />
 <app-apresentacao/>
 <app-qualidades-albertech/>
 <app-feedback-da-galera/>
+<app-footer/>
 </div>
