--- a/src/app/components/home/qualidades-albertech/qualidades-albertech.component.scss
+++ b/src/app/components/home/qualidades-albertech/qualidades-albertech.component.scss
@@ -212,7 +212,7 @@ section {
 
 @media (min-width: 1024px) and (max-height: 770px) {
     main{
-        margin-top: 50px;
+        padding-top: 100px;
     }
 
 }
