--- a/src/app/pages/cadastro/cadastro.component.scss
+++ b/src/app/pages/cadastro/cadastro.component.scss
@@ -12,8 +12,8 @@ main {
         align-items: center;
         gap: 25px;
         padding: 30px 40px;
+        box-shadow: 8px 8px 25px rgba(0, 0, 0, 0.3);
         background-color: var(--fundo-form-login-cadastro);
-        border: 1px solid var(--cinza-border-box);
         border-radius: 10px;
         max-width: 500px;
         width: 100%;
