--- a/src/app/components/dashboard/modal-cliente/modal-cliente.component.html
+++ b/src/app/components/dashboard/modal-cliente/modal-cliente.component.html
@@ -35,7 +35,7 @@
     <p-inputMask formControlName="telefone" mask="(99) 99999-9999" placeholder="(11) 98888-8888"
         class="input-telefone"></p-inputMask>
 
-    <input matInput formControlName="cidade" required placeholder="Digite a cidade da empresa" />
+    <input matInput formControlName="cidade" required placeholder="Cidade do cliente" />
 
     <select id="status" name="status" required formControlName="status">
         <option value="" disabled selected hidden>Escolha um status</option>
