--- a/src/app/components/dashboard/modal-cliente/modal-cliente.component.scss
+++ b/src/app/components/dashboard/modal-cliente/modal-cliente.component.scss
@@ -46,10 +46,13 @@ form {
         }
 
         &::placeholder {
+            text-transform: none;
             color: var(--subtitulo);
             opacity: 0.6;
         }
+
     }
+
     select {
         color: var(--preto);
         background-color: var(--branco-principal);
@@ -140,7 +143,7 @@ form {
 }
 
 @media (min-width: 1024px) and (max-height: 770px) {
-        form{
-            height: 95vh;
-        }
+    form {
+        height: 95vh;
+    }
 }
