style: scroll-fluido-animacao

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="tela">
-<app-header textoBotao="Login" rotaBotao="/login" />
-<app-apresentacao/>
+<app-header textoBotao="Login" rotaBotao="/login" id="topo"/>
+<app-apresentacao />
 <app-qualidades-albertech/>
 <app-feedback-da-galera/>
 <app-footer/>
