--- a/src/styles.scss
+++ b/src/styles.scss
@@ -69,6 +69,7 @@ html {
   --preto: #111;
   --cinza-border-box: #7573732a;
   --box-shadow-animation: #cccccc83;
+  --box-shadow-borrado:  rgba(0, 0, 0, 0.3);
   --subtitulo: #494848cc;
   --vermelho: red;
 }
