--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -13,7 +13,7 @@ main {
         gap: 25px;
         padding: 30px 40px;
         background-color: var(--fundo-form-login-cadastro);
-        box-shadow: 8px 8px 25px rgba(0, 0, 0, 0.3);
+        box-shadow: 8px 8px 25px var(--box-shadow-borrado);
         border-radius: 10px;
         max-width: 500px;
         width: 100%;
