feat: desabilitando-button-durante-a-requisicao

--- a/src/app/components/dashboard/modal-cliente/modal-cliente.component.html
+++ b/src/app/components/dashboard/modal-cliente/modal-cliente.component.html
@@ -46,7 +46,7 @@
 
 
     <div class="botoes">
-        <button mat-flat-button color="primary" type="submit" class="button-salvar">
+        <button mat-flat-button color="primary" type="submit" class="button-salvar" [ngClass]="{'button-desabilitado' : loading}">
             {{ loading
             ? (modoEdicao ? 'Salvando alterações...' : 'Cadastrando...')
             : (modoEdicao ? 'Salvar Alterações' : 'Cadastrar') }}
