--- a/src/app/pages/cadastro/cadastro.component.scss
+++ b/src/app/pages/cadastro/cadastro.component.scss
@@ -54,7 +54,6 @@ main {
     }
 }
 
-
 .botao-cadastro {
     display: block;
     width: 100%;
@@ -66,6 +65,10 @@ main {
     border-radius: 10px;
     font-size: 1.1rem;
     padding: 0.8rem;
+}
+
+.button-desabilitado{
+    pointer-events: none;
 }
 
 p-inputtext,
