fix: tamanho-do-nome-no-titulo-da-tabela

--- a/src/app/components/dashboard/card/card.component.scss
+++ b/src/app/components/dashboard/card/card.component.scss
@@ -11,8 +11,10 @@ article {
     cursor: pointer;
 
     h2 {
+        overflow: hidden;
+        text-overflow: ellipsis;
         transition: all ease 0.3s;
-
+        line-height: normal;
     }
 
     &:hover {
