feat: modal-deletar-clientes-componente

--- a/src/app/components/dashboard/card/card.component.html
+++ b/src/app/components/dashboard/card/card.component.html
@@ -20,7 +20,7 @@
         <div class="div-button">
             <button class="button-editar" (click)="editar.emit(cliente)"><img src="img/icons/edit-icon.svg"
                     alt="">Editar</button>
-            <button class="button-excluir" (click)="excluir()"><img src="img/icons/delete-icon.svg" alt="">Excluir</button>
+            <button class="button-excluir" (click)="abrirModalEdicao()"><img src="img/icons/delete-icon.svg" alt="">Excluir</button>
         </div>
     </aside>
 </article>
