--- a/src/app/components/home/feedback-da-galera/feedback-da-galera.component.html
+++ b/src/app/components/home/feedback-da-galera/feedback-da-galera.component.html
@@ -1,5 +1,5 @@
 <main>
-    <section data-aos="fade-up-left"  data-aos-duration="1400">
+    <section data-aos="zoom-out-up"  data-aos-duration="1400">
         <div class="titulo">
             <h1 class="font-quando-b">Empresas que <span>adoram</span> o Albertech</h1>
             <p class="font-quando">Histórias reais de sucesso com o Albertech</p>
