--- a/src/app/components/home/convite-para-cadastro/convite-para-cadastro.component.html
+++ b/src/app/components/home/convite-para-cadastro/convite-para-cadastro.component.html
@@ -1,5 +1,5 @@
 <main>
-    <section data-aos="fade-up-right"  data-aos-duration="1400">
+    <section data-aos="flip-down" data-aos-duration="1400">
         <div class="titulo">
             <h1 class="font-quando-b">Pronto para transformar a sua <span>gestão</span>?</h1>
             <p class="font-quando">Comece gratuitamente hoje e descubra como é fácil gerenciar seus clientes de forma profissional</p>
